added dockerfile,compose and its documentation.
the current version doesn't work since the client and server aren't
implemented yet and the arguments will probably change

--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>ch.heigvd.dai</groupId>
-  <artifactId>java-intellij-idea-and-maven</artifactId>
+  <artifactId>simpft</artifactId>
   <version>1.0</version>
 
   <dependencies>
