--- a/compose.yml
+++ b/compose.yml
@@ -6,8 +6,21 @@ services:
       # exposing on localhost for security reasons (we don't have authentication)
       - "${SERVER_ADDRESS:-127.0.0.1}:${SERVER_PORT:-1234}:1234"
     volumes:
-      - "data:/data"
+      - "server-data:/data"
     command: "--mode server --connections ${MAX_CONNECTIONS:-2} --address 0.0.0.0 --work-dir /data"
 
+  client:
+    image: dai-lab-02:latest
+    build: .
+    depends_on:
+      - server
+    ports:
+      # exposing on localhost for security reasons (we don't have authentication)
+      - "${CLIENT_ADDRESS:-127.0.0.1}:${CLIENT_PORT:-1234}:1234"
+    volumes:
+      - "client-data:/data"
+    command: "--mode client --address server --work-dir /data"
+
 volumes:
-  data:
+  client-data:
+  server-data:
