--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,19 @@
   <artifactId>simpft</artifactId>
   <version>1.0</version>
 
+  <distributionManagement>
+    <repository>
+      <id>github</id>
+      <name>GitHub Packages</name>
+      <url>https://maven.pkg.github.com/Thynkon/dai-pw-02</url>
+    </repository>
+
+    <snapshotRepository>
+      <id>github</id>
+      <url>https://maven.pkg.github.com/Thynkon/dai-pw-02</url>
+    </snapshotRepository>
+  </distributionManagement>
+
   <dependencies>
     <!-- https://mvnrepository.com/artifact/info.picocli/picocli -->
     <dependency>
