--- a/compose.yml
+++ b/compose.yml
@@ -6,7 +6,7 @@ services:
       # exposing on localhost for security reasons (we don't have authentication)
       - "${SERVER_ADDRESS:-127.0.0.1}:${SERVER_PORT:-1234}:1234"
     volumes:
-      - "server-data:/data"
+      - "./server-data:/data:rw"
     command: "--mode server --connections ${MAX_CONNECTIONS:-2} --address 0.0.0.0 --work-dir /data"
 
   client:
@@ -14,13 +14,11 @@ services:
     build: .
     depends_on:
       - server
-    ports:
-      # exposing on localhost for security reasons (we don't have authentication)
-      - "${CLIENT_ADDRESS:-127.0.0.1}:${CLIENT_PORT:-1234}:1234"
     volumes:
-      - "client-data:/data"
+      - "./client-data:/data:rw"
     command: "--mode client --address server --work-dir /data"
+    stdin_open: true
+    tty: true # Allocate a pseudo-TTY for debug purposes
 
 volumes:
-  client-data:
-  server-data:
+  data:
