--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,16 @@
       <artifactId>picocli</artifactId>
       <version>4.7.6</version>
     </dependency>
+      <dependency>
+        <groupId>org.tinylog</groupId>
+        <artifactId>tinylog-api</artifactId>
+        <version>2.7.0</version>
+      </dependency>
+      <dependency>
+        <groupId>org.tinylog</groupId>
+        <artifactId>tinylog-impl</artifactId>
+        <version>2.7.0</version>
+      </dependency>
   </dependencies>
 
   <properties>
